[project]
name = "url-reputation"
version = "1.4.1"
description = "Multi-source URL/domain security reputation checker"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "newuni"}
]
keywords = ["security", "url", "reputation", "malware", "phishing", "virustotal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
full = [
    "dnspython>=2.0.0",
    "python-whois>=0.8.0",
]

dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = false
ignore_missing_imports = true

[project.urls]
Homepage = "https://github.com/newuni/url-reputation"
Repository = "https://github.com/newuni/url-reputation"

[project.scripts]
url-reputation = "url_reputation.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["url_reputation"]
