[project]
name = "url-reputation"
version = "1.8.0"
description = "Multi-source URL/domain security reputation checker"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "newuni"}
]
keywords = ["security", "url", "reputation", "malware", "phishing", "virustotal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
# Full functionality with enrichment
full = [
    "dnspython>=2.0.0",
    "python-whois>=0.8.0",
    "rich>=13.0.0",
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.100.0",
    "memory-profiler>=0.61.0",
    "matplotlib>=3.5.0",
    "ruff>=0.9.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"
# The legacy `scripts/` folder is not part of the library surface.
exclude = ["scripts/**"]

[tool.ruff.lint]
# Keep this set tight; we can expand over time.
select = ["E", "F", "I", "B", "UP", "SIM", "RET", "C4"]
# Initial adoption: ignore a few noisy / legacy patterns; we will tighten later.
ignore = [
  "E501",   # line length
  "UP045",  # Optional[X] -> X|None migration (high-noise, do gradually)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "S101"]
"scripts/**" = ["E501", "S101", "S311"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
# Tightened level: require explicit Optional[...] for None defaults.
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
strict_equality = true
ignore_missing_imports = true
# Enforceable baseline: avoid global error suppression; tighten options over time.

[project.urls]
Homepage = "https://github.com/newuni/url-reputation"
Repository = "https://github.com/newuni/url-reputation"

[project.entry-points."url_reputation.providers"]
# External packages can register providers here.
# Example: mypkg = "mypkg.providers:provider"

[project.entry-points."url_reputation.enrichers"]
# External packages can register enrichers here.

[project.scripts]
url-reputation = "url_reputation.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["url_reputation"]
